--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 빌드 및 배포 
+name: 빌드 및 배포
 
 on:
   push:
@@ -9,41 +9,50 @@ env:
 
 jobs:
   build-docker-image:
-    runs-on: [self-hosted, label-kosa2]
+    runs-on: ubuntu-latest
+    container: gradle:8.3-jdk17  # Gradle + JDK 17 이미지
     steps:
       - name: 원격저장소에서 소스를 복사
         uses: actions/checkout@v3
 
-      - name: gradlew 실행 권한 설정 
+      - name: gradlew 실행 권한 설정
         run: chmod +x gradlew
 
-      - name: 소스파일을 docker이미지로 빌드한다
-        run: ./gradlew bootBuildImage --imageName hazelleey/hello-app:latest
-      
+      - name: 빌드 및 Docker 이미지 생성 (멀티 아키텍처)
+        run: |
+          # Docker Buildx 활성화
+          docker buildx create --use || true
+          
+          # Spring Boot Buildpacks로 이미지 빌드 (ARM 포함)
+          ./gradlew bootBuildImage \
+            --imageName=${{ env.USERNAME }}/hello-app:latest \
+            --builder paketobuildpacks/builder:tiny \
+            --env BP_PLATFORM=linux/amd64,linux/arm64
+
       - name: docker hub에 로그인을 한다
-        run: docker login -u ${{env.USERNAME}} -p ${{secrets.DOCKERHUB_PW }}
+        run: docker login -u ${{ env.USERNAME }} -p ${{ secrets.DOCKERHUB_PW }}
 
       - name: 생성된 이미지를 docker hub에 push 한다
-        run: docker push ${{env.USERNAME}}/hello-app:latest
+        run: docker push ${{ env.USERNAME }}/hello-app:latest
 
   deploy:
     needs: build-docker-image
     name: deploy
-    runs-on: [self-hosted, label-kosa2]
+    runs-on: [ self-hosted, label-kosa2]
     steps:
-      - name: 기존 서비스를 제거한다
-        run: docker service rm hello-app:latest
+      - name: 기존에 실행중인 서비스를 제거한다 
+        run: docker service rm hello-app
 
       - name: docker hub에 로그인을 한다
-        run: docker login -u ${{env.USERNAME}} -p ${{secrets.DOCKERHUB_PW}}
-                
-      - name: 생성된 이미지를 docker hub에 pull로 내려받는다
+        run: docker login -u ${{ env.USERNAME }} -p ${{ secrets.DOCKERHUB_PW }}
+
+      - name: 생성된 이미지를 docker hub에 pull로 내려 받는다
         run: docker pull ${{env.USERNAME}}/hello-app:latest
-                
-      - name: 도커 서비스 실행
+
+      - name: 이미지 Pull 및 서비스 실행
         run: |
           docker service create \
-              --name hello-app:latest \
-              --publish published=8001,target=8080 \
-              --replicas 3 \
-              ${{env.USERNAME}}/hello-app:latest
+            --name hello-app \
+            --publish published=8001,target=8080 \
+            --replicas 3 \
+            ${{ env.USERNAME }}/hello-app:latest
