--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           
           # Spring Boot Buildpacks로 이미지 빌드 (ARM 포함)
           ./gradlew bootBuildImage \
-            --imageName=${{ env.USERNAME }}/hello-app:latest \
+            --imageName=hazelleey/hello-app:latest \
             --builder paketobuildpacks/builder:tiny \
             --env BP_PLATFORM=linux/amd64,linux/arm64
 
